ep08 - Auto-generating HTTP clients from Swagger files
